--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
+    "aframe-extras": "^6.1.1",
     "sirv-cli": "^1.0.0",
     "socket.io": "^4.1.3"
   }
